@@ -2,7 +2,7 @@ Source: python-dvdvideo
 Section: python
 Priority: extra
 Maintainer: Bastian Blank <waldi@debian.org>
-Build-Depends: debhelper (>= 9.0.0), python3
+Build-Depends: debhelper (>= 9.0.0), python3, python3-pytest
 Standards-Version: 3.9.4
 X-Python3-Version: >= 3.2
 
